[Bug] Fixed z-index on side nav to make links work

--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -267,7 +267,7 @@ input[type=submit]:hover {
     height: 100%;
     width: 15%;
     position: fixed;
-    z-index: -1;  
+    z-index: 1;  
     top: 10%;
     left: 0;
     background-color: rgba(17, 17, 17, 0.671);
@@ -275,6 +275,7 @@ input[type=submit]:hover {
     padding-top: 20px;
     font-family: "Bad script";
 }
+
 .sidenav a{
     padding: 6px 8px 6px 16px;
     text-decoration: none;
